--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.5.3'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.springframework.boot' version '3.3.4'
+    id 'io.spring.dependency-management' version '1.1.6'
 }
 
 group = 'devlava'
@@ -21,24 +21,35 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://repo.spring.io/snapshot' }
 }
 
 ext {
-    set('springAiVersion', "1.0.0")
+    set('springAiVersion', "1.0.0-M3")
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.postgresql:postgresql'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
 
-    // Spring AI 의존성들
+    // Spring AI 핵심 의존성들
+    implementation 'org.springframework.ai:spring-ai-core'
+    implementation 'org.springframework.ai:spring-ai-spring-boot-autoconfigure'
+
+    // Ollama 의존성
     implementation 'org.springframework.ai:spring-ai-ollama-spring-boot-starter'
+
+    // PgVector 의존성
     implementation 'org.springframework.ai:spring-ai-pgvector-store-spring-boot-starter'
+
+    // Tika 문서 리더
     implementation 'org.springframework.ai:spring-ai-tika-document-reader'
 
-    // 다양한 문서 형식 지원을 위한 의존성
-    implementation 'org.springframework.ai:spring-ai-tika-document-reader'
+    // 추가 벡터 스토어 의존성
+    implementation 'org.springframework.ai:spring-ai-pgvector-store'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
